--- a/index.html
+++ b/index.html
@@ -2038,28 +2038,20 @@
               >
                 <div>
                   <div id="video01" class="video">
-                    <video
-                      src="assets/videos/video01.mp4.jpg"
-                      poster="assets/videos/video01.mp4.jpg"
-                      preload="auto"
-                      playsinline
-                      webkit-playsinline
-                      muted
-                      autoplay
-                      loop
-                      controls
-                    ></video>
+                    <img src="./assets/images/logo.png" alt="" />
                   </div>
                 </div>
                 <div>
-                  <h2 id="text02" class="style4">JUPUARY = MOON</h2>
+                  <h2 id="text02" class="style4">BEYOND LIMITS</h2>
                   <p id="text08" class="style3">
-                    Prepare to witness the inauguration of JUPUARY—a convergence
-                    of professional acumen and spirited dynamics where the
-                    narrative of Solana&#39;s liquidity surge unfolds. Join us
-                    on this cosmic journey, where professionalism meets
-                    enthusiasm, and the promise of substantial gains resonates
-                    across the vast expanse of the crypto galaxy.
+                    Get ready for liftoff! Jupuary is poised to soar beyond the
+                    stars, as it sets its sights on the moon. Buckle up for an
+                    astronomical ride as we witness Jupuary defy gravity in the
+                    crypto space. With its groundbreaking technology and
+                    limitless vision, Jupuary is not just reaching for the moon;
+                    it's on a trajectory to redefine the cosmos of digital
+                    finance. Join us on this stellar voyage – Jupuary: Elevating
+                    Your Investments to New Heights. 🌕🚀 #ToTheMoonWithJupuary
                   </p>
                   <ul id="icons03" class="style2 icons">
                     <li>
