--- a/index.html
+++ b/index.html
@@ -1952,19 +1952,21 @@
                       ><strong
                         >Name: JUPUARY<br />
                         Symbol: JUPU<br />
-                        Supply: 10,000,000,000<br />
-                        Token 2022</strong
-                      ></span
+                        Supply: 100,000,000<br />
+                        LP : Burnt
+                        <br />
+                        CA : Renounced
+                      </strong></span
                     >
                   </p>
-                  <p id="text09" class="style1">
+                  <!-- <p id="text09" class="style1">
                     <span class="p">- 5% Public Presale FCFS</span
                     ><span class="p">- 5% Private Seed Round (Completed)</span
                     ><span class="p"
                       >- 80% LP (Plus Remaining Public Presale)</span
                     ><span class="p">- 5% Marketing Budget/ Airdrops</span
                     ><span class="p">- 5% Team Wallet</span>
-                  </p>
+                  </p> -->
                   <ul id="buttons01" class="style2 buttons">
                     <li>
                       <a href="birdlink" class="button n01"
