--- a/index.html
+++ b/index.html
@@ -1860,7 +1860,9 @@
                   </p>
                   <ul id="buttons03" class="style1 buttons">
                     <li>
-                      <a href="twitterlink" class="button n01"
+                      <a
+                        href="https://twitter.com/Jupuary_Solana"
+                        class="button n01"
                         ><svg>
                           <use
                             xlink:href="#icon-ecbd7520f72820fb3c1bfce19d8ed9ce"
@@ -2057,7 +2059,10 @@
                   </p>
                   <ul id="icons03" class="style2 icons">
                     <li>
-                      <a class="n01" href="twitterlink" aria-label="Twitter"
+                      <a
+                        class="n01"
+                        href="https://twitter.com/Jupuary_Solana"
+                        aria-label="Twitter"
                         ><svg>
                           <use
                             xlink:href="#icon-0c4db87eff374f0f1ef47f8f043f0132"
